# bats-core

./: .appveyor.yml  .codespellrc  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  BUILD.bazel  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  README.md  SECURITY.md  WORKSPACE  bats.bzl  compose.override.dist  compose.yaml  docker-compose.debug.yml  docker-compose.override.dist  install.sh  package-lock.json  package.json  q.bats  report.xml  run.sh  shellcheck.sh  test.bats  uninstall.sh
test/: .bats.bats.swp  BUILD.bazel  bats.bats  bats_pipe.bats  cat-formatter.bats  common.bats  concurrent-coordination.bash  exclude.bats  file_setup_teardown.bats  filter.bats  formatter.bats  install.bats  junit-formatter.bats  list_test_names.bats  load.bats  parallel.bats  parallell.bats  pretty-formatter.bats  root.bats  run.bats  shellcheck.bats  suite.bats  suite_setup_teardown.bats  tagging.bats  tap13-formatter.bats  test_helper.bash  timeout.bats  trace.bats  warnings.bats
test/fixtures/: todo.bats
test/fixtures/bats/: BATS_TMPDIR.bats  BATS_variables_dont_contain_double_slashes.bats  after_run.bats  bats_bucket.bats  cd_in_test.bats  cmd_using_stdin.bash  comment_style.bats  date  dos_line_no_shellcheck.bats  double_brackets.bats  duplicate-tests.bats  dynamic_test_registration.bats  environment.bats  errexit_env.bats  errexit_test.bats  exit_11.bash  exported_function.bats  external_function_calls.bats  external_functions.bash  external_functions.bats  failing_with_bash_cond.bats  failing_with_bash_cond_then_true.bats  failing_with_bash_expression.bats  failing_with_bash_expression_then_true.bats  failing_with_negated_command.bats  failure_callback.bats  failure_callback_setup_file.bats  failure_in_free_code.bats  find_library_helper.bats  focus.bats  focused_filtered_out.bats  gobble_up_stdin_sleep_and_print_finish.bash  hang_after_run.bats  hang_in_run.bats  hang_in_setup_file.bats  hang_in_teardown.bats  hang_in_teardown_file.bats  hang_in_test.bats  issue-205.bats  issue-519.bats  (+48 more)
test/fixtures/exclude/: bar.bats  foo.bats
test/fixtures/file_setup_teardown/: error_in_setup_and_teardown_file.bats  no_setup_file.bats  no_teardown_file.bats  setup_file.bats  setup_file2.bats  setup_file_does_not_leak_env.bats  setup_file_does_not_leak_env2.bats  setup_file_even_if_all_tests_are_skipped.bats  setup_file_failed.bats  setup_file_halfway_error.bats  teardown_file.bats  (+7 more)
test/tmp/: .gitignore
(+250 files in other folders)
