# BATS: Bash Automated Testing System
# This is the BUILD.bazel file for compiling the bats binary.
# Additional rules might need to be added to enable the other bats libraries.

sh_library(
    name = "bats_lib",
    srcs = glob(["libexec/**"]),
)

sh_binary(
    name = "bats",
    srcs = ["bin/bats"],
    visibility = ["//visibility:public"],
    deps = [
        ":bats_lib",
    ],
)
