load("//:bats.bzl", "bats_test")

bats_test(
    name = "bats_test_suite",
    srcs = ["bats.bats"],
    deps = [
        # Because of a space in a filename, this directory must be handled
        # specially (like this, instead of a glob):
        "fixtures/bats/.",
    ] + glob(
        ["**"],
        exclude = [
            "BUILD.bazel",
            "fixtures/bats/*",
        ],
    ),
)
